Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93189

qmllint does not handle Behavior correctly

    XMLWordPrintable

Details

    • acdef32ab927e17d8d832b514f35f7985ac782a1 (qt/qtdeclarative/dev)

    Description

      Running qmllint on declarative's TimeExample (/examples/qml/qmlextensionplugins/imports/TimeExample) leads to false positive warnings, due to us not handling Behavior correctly.


      Warning: ./examples/qml/qmlextensionplugins/imports/TimeExample/Clock.qml:71:25: Property "angle" of type "double" is assigned an incompatible type "Behavior"
                  Behavior on angle {
                              ^^^^^
      Warning: ./examples/qml/qmlextensionplugins/imports/TimeExample/Clock.qml:85:17: Cannot assign multiple objects to a default non-list property
                      SpringAnimation{ spring: 2; damping: 0.2; modulus: 360 }
                      ^^^^^^^^^^^^^^^
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            max.goldstein Maximilian Goldstein
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes