qmllint: Fix false positive warnings for non-list default property

We stored whether something was assigned a default property in the scope the property stems from rather than the one where it occurs.
This leads to issues when two destinct elements both share the same base type and want to assign a default property.

Task-number: QTBUG-93189
Change-Id: I0560a0ffc6f83849333f8f5fad8e760bd05bec9a
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>