tests/auto/qml/qmllint/data/2behavior.qml
@@ -1,0 +1,10 @@
+import QtQuick 2.15
+
+Item {
+    Behavior {
+        SpringAnimation{ spring: 2; damping: 0.2; modulus: 360 }
+    }
+    Behavior  {
+        SpringAnimation{ spring: 2; damping: 0.2; modulus: 360 }
+    }
+}
