tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -710,6 +710,7 @@ void TestQmllint::cleanQmlCode_data()
     QTest::newRow("propertyOverride") << QStringLiteral("propertyOverride.qml");
     QTest::newRow("propertyBindingValue") << QStringLiteral("propertyBindingValue.qml");
     QTest::newRow("customParser") << QStringLiteral("customParser.qml");
+    QTest::newRow("2Behavior") << QStringLiteral("2behavior.qml");
 }
 
 void TestQmllint::cleanQmlCode()
